<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.IngredientesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/ingredientes_seleccionados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientes_seleccionados"

                    app:layout_constraintTop_toTopOf="parent"

                    android:paddingTop="100dp"

                    android:textColor="@color/title_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Buscar ingredientes:" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvIngredientesSeleccionados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredientes_seleccionados"
                    android:paddingTop="10dp"
                    android:maxHeight="200dp"
                    android:isScrollContainer="true">


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/todos_los_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todos_los_ingredientes"

                    app:layout_constraintTop_toBottomOf="@+id/rvIngredientesSeleccionados"
                    android:paddingTop="20dp"

                    android:textColor="@color/title_color"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Buscar ingredientes:" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTodosIngredientes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="150dp"
                    app:layout_constraintTop_toBottomOf="@id/todos_los_ingredientes" >


                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>



        <LinearLayout
            android:id="@+id/buscador_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="4dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/buscar_ingrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar_ingrediente"
                android:textColor="@color/title_color"
                android:textSize="22sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"

                tools:text="Buscar ingredientes:" />

            <EditText
                android:id="@+id/buscador_de_ingredientes"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"

                android:hint="Macarrones"
                android:inputType="text"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/buscar_ingrediente" />


            <TextView
                android:id="@+id/advertencia_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/buscador_de_ingredientes"

                android:textSize="18dp"
                android:textStyle="italic"

                android:layout_marginLeft="4dp"

                android:visibility="gone"
                android:text = "@string/advertencia_label"
                android:textColor="@color/red"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnCrearReceta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/crear_receta_button"
            android:textSize="19sp"/>

    </RelativeLayout>

</FrameLayout>